WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293489
NetworkRTCTCPSocketCocoa::getInterfaceName is not always answering its completion handler
https://bugs.webkit.org/show_bug.cgi?id=293489
Summary
NetworkRTCTCPSocketCocoa::getInterfaceName is not always answering its comple...
youenn fablet
Reported
2025-05-23 07:51:22 PDT
NetworkRTCTCPSocketCocoa::getInterfaceName is not always answering its completion handler, as per
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sequoia-Debug-WK2-Tests-EWS/1966e0b7-23496/http/wpt/webrtc/third-party-frame-ice-candidate-filtering-stderr.txt
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-23 07:51:38 PDT
<
rdar://problem/151924020
>
youenn fablet
Comment 2
2025-05-23 07:55:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45835
EWS
Comment 3
2025-05-26 03:50:41 PDT
Committed
295415@main
(877db403d4d9): <
https://commits.webkit.org/295415@main
> Reviewed commits have been landed. Closing PR #45835 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug