NetworkRTCTCPSocketCocoa::getInterfaceName is not always answering its completion handler rdar://151924020 https://bugs.webkit.org/show_bug.cgi?id=293489

Reviewed by Jean-Yves Avenard.

We migrate NetworkRTCTCPSocketCocoa::getInterfaceName to a NativePromise.
This simplifies both the thread management and the fact that the callback is always executed and only once.
To fix the issue of not always answering NetworkRTCTCPSocketCocoa::getInterfaceName completion handler, we use an auto reject promise producer.
Minor refactoring to remove protectedRTCNetworkThreadQueue given we can use a const Ref for the work queue.

* Source/WebKit/NetworkProcess/webrtc/NetworkRTCProvider.cpp:
(WebKit::NetworkRTCProvider::getInterfaceName):
(WebKit::NetworkRTCProvider::callOnRTCNetworkThread):
(WebKit::NetworkRTCProvider::assertIsRTCNetworkThread):
(WebKit::NetworkRTCProvider::protectedRTCNetworkThreadQueue): Deleted.
* Source/WebKit/NetworkProcess/webrtc/NetworkRTCProvider.h:
* Source/WebKit/NetworkProcess/webrtc/NetworkRTCTCPSocketCocoa.h:
* Source/WebKit/NetworkProcess/webrtc/NetworkRTCTCPSocketCocoa.mm:
(WebKit::NetworkRTCTCPSocketCocoa::getInterfaceName):

Canonical link: https://commits.webkit.org/295415@main